--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ description: > # this means to ignore newlines until "baseurl:"
   Howdy! My name is Sadra Isapanah Amlashi. I’m an Android and iOS App Developer.
 
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://sadra.github.io/english/" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://sadra.github.io/english" # the base hostname & protocol for your site, e.g. http://example.com
 
 twitter_path: https://twitter.com/sadra-amlashi
 github_path: https://github.com/sadra
@@ -19,7 +19,6 @@ plugins:
   - jekyll-feed
   - jekyll-autoprefixer
   - jekyll-archives
-  - jalalidate
 
 exclude:
   - Gemfile
