--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ email: sadra@isapanah.com
 description: > # this means to ignore newlines until "baseurl:"
   Howdy! My name is Sadra Isapanah Amlashi. I’m an Android and iOS App Developer.
 
-baseurl: "" # the subpath of your site, e.g. /blog
+baseurl: "/english" # the subpath of your site, e.g. /blog
 url: "https://sadra.github.io/english" # the base hostname & protocol for your site, e.g. http://example.com
 
 twitter_path: https://twitter.com/sadra-amlashi
