--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ medium_path: https://medium.com/sadra
 linkedin_path: https://www.linkedin.com/in/amlashisadra/
 
 # Build settings
-permalink: pretty
+permalink: :year/:title
 markdown: kramdown
 plugins:
   - jekyll-feed
