Add new post about ios app moves to Foreground and Background

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Sadra Isapanah Amlashi
 email: sadra@isapanah.com
 description: > # this means to ignore newlines until "baseurl:"
-  Howdy! My name is Sadra Isapanah Amlashi. I’m an Android and iOS App Developer.
+  My name is Sadra. I’m an iOS & Android App Developer.
 
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://isapanah.com/english" # the base hostname & protocol for your site, e.g. http://example.com
