--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ description: > # this means to ignore newlines until "baseurl:"
   My name is Sadra. I’m an iOS & Android App Developer.
 
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://isapanah.com/english" # the base hostname & protocol for your site, e.g. http://example.com
+url: "//isapanah.com/english" # the base hostname & protocol for your site, e.g. http://example.com
 
 twitter_path: https://twitter.com/sadra-amlashi
 github_path: https://github.com/sadra
@@ -25,6 +25,7 @@ exclude:
   - Gemfile.lock
 sass:
   sass_dir: _sass
+  style: compressed
 
 jekyll-archives:
   enabled:
@@ -36,6 +37,11 @@ jekyll-archives:
   permalinks:
     tag: '/tag/:name/'
     category: '/category/:name/'
+
 include:
   - .nojekyll
+  - .htaccess
+
 notfound404-cover: /assets/img/base/bugart-bacall.jpg
+
+version : 101
