--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 title: Sadra Isapanah Amlashi
-email: sadra@isapanah.com
+email: contact@sadra.me
 description: > # this means to ignore newlines until "baseurl:"
   My name is Sadra. I’m an iOS & Android App Developer.
 
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "//isapanah.com/english" # the base hostname & protocol for your site, e.g. http://example.com
+url: "//sadra.me//english" # the base hostname & protocol for your site, e.g. http://example.com
 
 twitter_path: https://twitter.com/sadra-amlashi
 github_path: https://github.com/sadra
